[package]
name = "hello-proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hello_macro = {path = "../hello_macro" }
hello_macro_derive={path="../hello_macro/hello_macro_derive"}
